$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.604 2010/03/05 16:08:15 nm4 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.72
-----------------

JJ/01 installed exipick 20100104.1, adding $max_received_linelength, $data_path, and $header_path variables; fixed documentation bugs and typos

JJ/02 installed exipick 20100222.0, added --input-dir and --finput to allow exipick to access non-standard spools, including the "frozen" queue (Finput)

NM/01 Bugzilla 965: Support mysql stored procedures.
      Patch from Alain Williams

NM/02 Bugzilla 961: Spacing fix (syntax error) on Makefile directives for NetBSD

NM/03 Bugzilla 955: Documentation fix for max_rcpts.
      Patch from Andreas Metzler


Exim version 4.71
-----------------

TK/01 Bugzilla 912: Fix DKIM segfault on empty headers/body

NM/01 Bugzilla 913: Documentation fix for gnutls_* options.

NM/02 Bugzilla 722: Documentation for randint.  Better randomness defaults.

NM/03 Bugzilla 847: Enable DNSDB lookup by default.

NM/04 Bugzilla 915: Flag broken perl installation during build.


Exim version 4.70
-----------------

TK/01 Added patch by Johannes Berg that expands the main option
      "spamd_address" if it starts with a dollar sign.

TK/02 Write list of recipients to X-Envelope-Sender header when building
      the mbox-format spool file for content scanning (suggested by Jakob
      Hirsch)

TK/03 Added patch by Wolfgang Breyha that adds experimental DCC
      (http://www.dcc-servers.net/) support via dccifd. Activated by
      setting EXPERIMENTAL_DCC=yes in Local/Makefile.

TK/04 Bugzilla 673: Add f-protd malware scanner support. Patch submitted
      by Mark Daniel Reidel <mr@df.eu>.

NM/01 Bugzilla 657: Embedded PCRE removed from the exim source tree.
      When building exim an external PCRE library is now needed -
      PCRE is a system library on the majority of modern systems.
      See entry on PCRE_LIBS in EDITME file.
